Solved the problem of left/right infobox alignments with floats

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -730,13 +730,6 @@ div[datepicker] {
     overflow: visible;
 }
 
-.infobox-header-settings-button {
-	display:inline-block;
-	margin-right: 5px;
-    position: absolute;
-    right: 0;
-}
-
 .infobox-title {
     color: @infobox-black;
     font-size: 18px;
